wiki-chart/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: wiki
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana
