wiki-chart/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: wiki
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
