wiki-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: wiki
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 9000
      targetPort: 9000
